--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@ant-design/icons": "^6.0.0",
     "@tailwindcss/vite": "^4.1.10",
     "antd": "^5.26.0",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-slot-counter": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
