--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@tailwindcss/vite": "^4.1.10",
     "antd": "^5.26.0",
     "axios": "^1.10.0",
+    "firebase": "^9.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.2",
     "react-slot-counter": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
